# psycourse

./: .gitignore  .pre-commit-config.yaml  CopyOfLipidomics.Rmd  README.md  environment.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
.github/workflows/: main.yml
docs_template/source/background/: dag.md  directory_structure.md  running_example.md
docs_template/source/development/: how-to-contribute.md
docs_template/source/getting_started/: customising_the_template.md  template_setup.md
docs_template/source/guides_explanations/: hooks.md
documents/: task_documents.py
hpc_runs/jobs/: pytask_job.slurm
sandbox/: sandbox.ipynb
src/: config.py
src/data_management/: data_cleaning.py  data_encoding.py  sandbox.ipynb  task_data_management_template.py
src/final/: task_final_template.py
src/psycourse/: config.py
src/psycourse/analysis/: task_analysis_template.py
src/psycourse/data_analysis/: baseline_models.py  cca.py  cca_regression.py  elastic_net.py  explorative_hurdle_wrappers.py  explorative_two_step_hurdle.py  hurdle_wrappers.py  incremental_r2.py  lipid_permutation_analysis.py  mediation_analysis.py  multivariate_analysis.py  multivariate_prs.py  stacked_multivariate_model.py  stacked_multivariate_models_residuals.py  stacked_multivariate_models_residuals_cov_controlled.py  task_baseline_two_step_hurdle.py  task_cca_regression.py  task_explorative_two_step_hurdle.py  task_incremental_r2.py  task_individual_r2.py  task_lipid_permutation_analysis.py  task_mediation_analysis.py  task_two_step_hurdle.py  task_univariate_analysis.py  task_univariate_analysis_panss.py  task_univariate_binarized_analysis.py  two_step_hurdle.py  univariate_analysis.py  univariate_analysis_panss.py  univariate_binarized_analysis.py
src/psycourse/data_management/: data_cleaning.py  data_encoding.py  data_prep_analysis.py  data_prep_classifier.py  data_prep_integrated_analysis.py  data_prep_multimodal_lipid_subset.py  task_data_cleaning.py  task_data_encoding.py  task_data_management.py  task_data_management_template.py  task_data_prep_analysis.py  task_data_prep_classifier.py  task_data_prep_integrated_analysis.py  task_data_prep_multimodal_lipid_subset.py
src/psycourse/descriptive_stats/: descriptive_tables.py  task_descriptive_tables.py  task_export_supplementary.py
src/psycourse/final/: task_final_template.py
src/psycourse/integrated_analysis/: DIABLO TCGA Case Study.R  diablo_model.R
src/psycourse/ml_pipeline/: apply_model_to_new_data.py  concat_full_predicted_probability_df.py  impute.py  task_apply_model_to_new_data.py  task_concat_full_predicted_probability.py  task_data_prep_classifier.py  task_train_model.py  train_model.py
src/psycourse/plots/: cca_plot.py  descriptive_plots.py  incremental_r2_plot.py  lipid_enrichment_plot.py  mediation_plots.py  svm_plots.py  task_cca_plot.py  task_descriptive_plots.py  task_incremental_r2_plot.py  task_lipid_enrichment_plot.py  task_mediation_plots.py  task_svm_plots.py  task_univariate_plots.py  univariate_plots.py
src/psycourse/sandbox/: sandbox_archived.ipynb  test.ipynb
src/psycourse_py/: Dwyer_PsyCourse_ClusterLabels.csv
src/psycourse_py/analysis/: task_analysis_template.py
src/psycourse_py/data_management/: task_data_management_template.py
src/psycourse_py/final/: task_final_template.py
tests/: test_template.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_stats4schools_smoking.py
tests/ml_pipeline/: test_train_model.py
