# ======================================================================================
# Project metadata
# ======================================================================================

[project]
name = "psycourse"
description = "tbd"
requires-python = ">=3.11"
dynamic = ["version"]
keywords = ["psychiatry"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
authors = [
    { name = "JANE DOE", email = "janedoe@example-university.com" },
]
dependencies = ["snakeviz>=2.2.2,<3"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
Github = "https://github.com/anthano/psycourse"

# ======================================================================================
# Build system configuration
# ======================================================================================

[build-system]
requires = ["hatchling", "hatch_vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.vcs]
version-file = "src/psycourse/_version.py"

[tool.hatch.build.targets.sdist]
exclude = ["tests"]
only-packages = true

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

# ======================================================================================
# Pixi
# ======================================================================================
[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.dependencies]
python = "==3.12"
jupyterlab = "*"
pre-commit = "*"
pytask = ">=0.5.0"
pytest = "*"
numpy = "*"
pandas = ">=2.2"
matplotlib = ">=3.10.0,<4"
scikit-learn = ">=1.6.1,<2"
pygraphviz = "*"
ipykernel = ">=6.29.5,<7"
pip = ">=25.0.1,<26"
statsmodels = ">=0.14.0,<1"
seaborn = ">=0.13.2,<0.14"
libgfortran = "*"
libgfortran5 = ">=11"
openblas = "*"
scipy = ">=1.13.0"
pytask-parallel = ">=0.5.1,<0.6"
pingouin = ">=0.5.5,<0.6"
r-base = ">=4.4.3,<4.6"
pytask-r = ">=0.4.1,<0.5"
pyarrow = ">=21.0.0,<23"
openpyxl = ">=3.1.5,<4"

[tool.pixi.pypi-dependencies]
pdbp = "*"
psycourse = {path = ".", editable = true}


# ======================================================================================
# Pytask configuration
# ======================================================================================

[tool.pytask.ini_options]
paths = ["./src/psycourse"]
pdbcls = "pdbp:Pdb"

# ======================================================================================
# Ruff configuration
# ======================================================================================

[tool.ruff]
target-version = "py312"
fix = true
exclude = ["src/psycourse/sandbox"]

[tool.ruff.lint]
select = [
  # isort
  "I",
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # flake8-2020
  "YTT",
  # flake8-bugbear
  "B",
  # flake8-quotes
  "Q",
  # pylint
  "PLE", "PLR", "PLW",
  # misc lints
  "PIE",
  # tidy imports
  "TID",
  # implicit string concatenation
  "ISC",
]

extend-ignore = [
  # allow module import not at top of file, important for notebooks
  "E402",
  # do not assign a lambda expression, use a def
  "E731",
  # Too many arguments to function call
  "PLR0913",
  # Too many returns
  "PLR0911",
  # Too many branches
  "PLR0912",
  # Too many statements
  "PLR0915",
  # Magic number
  "PLR2004",
  # Consider `elif` instead of `else` then `if` to remove indentation level
  "PLR5501",
  # For calls to warnings.warn(): No explicit `stacklevel` keyword argument found
  "B028",
  # Incompatible with formatting
  "ISC001",
  # Missing type annotations
  "ANN",
  # Conflict with ruff-format
    "COM812",
    "D10",  # Missing docstrings
    "ISC001", # Conflict with ruff-format
    "PD901", # df is a great name with functional data management
    "PLR0913",  # Too many arguments in function definition
    "RET504", # Don't force to calculate upon return
    "S101",  # Use of `assert` detected.
    "S301",  # pickle module is unsafe
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "PD011"]
"task_*.py" = ["ANN", "ARG001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ======================================================================================
# Miscellaneous tools configuration
# ======================================================================================


[tool.pytest.ini_options]
addopts = "--pdbcls=pdbp:Pdb"
filterwarnings = []
markers = [
    "wip: Tests that are work-in-progress.",
    "unit: Flag for unit tests which target mainly a single function.",
    "integration: Flag for integration tests which may comprise of multiple unit tests.",
    "end_to_end: Flag for tests that cover the whole program.",
]


[tool.yamlfix]
line_length = 88
none_representation = "null"
